--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
 
 <body>
   <div class="container">
-    <img src="/images/d.svg" class="star1">
-    <img src="/images/d.svg" class="star2">
-    <img src="/images/d.svg" class="star3">
-    <img src="/images/d.svg" class="star4">
-    <img src="/images/d.svg" class="star5">
-    <img src="/images/d.svg" class="star6">
+    <img src="d.svg" class="star1">
+    <img src="d.svg" class="star2">
+    <img src="d.svg" class="star3">
+    <img src="d.svg" class="star4">
+    <img src="d.svg" class="star5">
+    <img src="d.svg" class="star6">
     <h1>Food Delivery Service</br> Feedback</h1>
     <form action="/submit-feedback" method="post">
       <label for="name">Your Name:</label>
