--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
       <button type="submit" id="submit-btn">Submit Feedback</button>
     </form>
+    <button class="btn" onclick="window.location.href='/feedback'">View Feedbacks</button>
   </div>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
